--- a/task3/style.css
+++ b/task3/style.css
@@ -1,6 +1,25 @@
-#trafficLight {
+.traffic-light {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  margin: 0 auto;
+}
+
+.traffic-light-item {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+.traffic-light-item {
     background: black;
-  }
+}
+.traffic-light-item.red.active{
+    background: red;
+}
+.traffic-light-item.yellow.active{
+    background: yellow;
+}
+.traffic-light-item.green.active{
+    background: green;
+}
