--- a/task3/style.css
+++ b/task3/style.css
@@ -1,9 +1,15 @@
+body {
+    background-color:rgba(12, 12, 79, 0.795);
+    overflow-x: hidden;
+}
+
 .traffic-light {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 8px;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    margin: 0 auto;
+    padding: 10%;
 }
 
 .traffic-light-item {
@@ -13,13 +19,14 @@
 }
 .traffic-light-item {
     background: black;
+    border-style: solid;
 }
-.traffic-light-item.red.active{
-    background: red;
+.traffic-light-item.green.active{
+    background: green;
 }
 .traffic-light-item.yellow.active{
     background: yellow;
 }
-.traffic-light-item.green.active{
-    background: green;
+.traffic-light-item.red.active{
+    background: red;
 }
